--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="einloggen">Einloggen</string>
+    <string name="wichtigkeit">Wichtigkeit:</string>
+    <string name="erledigt">Erledigt</string>
 
 </resources>
