--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,5 +10,7 @@
     <string name="buttonSave">Speichern</string>
     <string name="buttonDelete">Löschen</string>
     <string name="todoerstellen">TODO Erstellen</string>
+    <string name="emailFalsch">Es ist keine gültige Email-Adresse. Eine gültige Email-Adresse eingeben.</string>
+    <string name="passwortFalsch">Passwort muss genau sechs Ziffern lang sein.</string>
 
 </resources>
