--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,5 +13,10 @@
     <string name="emailFalsch">Es ist keine gültige Email-Adresse. Eine gültige Email-Adresse eingeben.</string>
     <string name="passwortFalsch">Passwort muss genau sechs Ziffern lang sein.</string>
     <string name="wichtig">Wichtig</string>
+    <string-array name="Filter">
+        <item >Erledigt</item>
+        <item >Datum/Wichtigkeit</item>
+        <item >Wichtigkeit/Datum</item>
+    </string-array>
 
 </resources>
