--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,5 +20,6 @@
     </string-array>
         <string name="lokallogin">Lokal arbeiten</string>
         <string name="loginFalsch">Falsche Login-Daten! Versuchen sie es noch ein Mal!</string>
+        <string name="addContact">Kontakt hinzufügen...</string>
 
 </resources>
